--- a/android/apktool.yml
+++ b/android/apktool.yml
@@ -1,5 +1,5 @@
 !!brut.androlib.meta.MetaInfo
-apkFileName: Incredibox_v0.5.4_apkmody.io.apk
+apkFileName: Incredibox_v0.5.4.apk
 compressionType: false
 doNotCompress:
 - resources.arsc
